[package]
name = "eco_weave"
version = "0.1.0"
authors = ["Malo Henry <winrhy@gmail.com>"]
edition = "2021"
description = "A high-level Rust library for Tangle algorithms, part of the EcoBlock project."
repository = "https://github.com/EcoBlock-Network/eco_weave"
license = "MIT"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["std", "rand_core"] }
futures = "0.3.31"
rand = "0.8.5"
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"


[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "wrw_benchmark"
harness = false
